[project]
name = "llm_sdxl_adapter"
description = "A comprehensive set of ComfyUI nodes for using Large Language Models (LLM) as text encoders for SDXL image generation through a trained adapter."
version = "1.1.0"

[project.urls]
Repository = "https://github.com/NeuroSenko/ComfyUI_LLM_SDXL_Adapter"

[tool.comfy]
PublisherId = "neurosenko"
DisplayName = "ComfyUI LLM SDXL Adapter"
